[package]
name = "rtmp-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
log = "0.4.0"
env_logger = "0.8.4"
rml_rtmp = "0.6.1"
dotenv = "0.15.0"
derive_more = "0.99.17"
gst = { package = "gstreamer", version = "0.18.8" }
gst_app = { package = "gstreamer-app", version = "0.18.7" }
